fix(web-components): fix icon slots for button and side nav where svg is wrapped in an element
Fix icon slots for button and side nav where svg is wrapped in an element

--- a/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
+++ b/packages/web-components/src/components/ic-navigation-item/ic-navigation-item.css
@@ -346,6 +346,14 @@ ic-typography {
   flex: 0 1 0%;
 }
 
+.icon > ::slotted(*) {
+  margin-left: var(--ic-space-md) !important;
+}
+
+:host(.navigation-item-side-nav-collapsed) .icon > ::slotted(*) {
+  margin: auto !important;
+}
+
 :host(.navigation-item-side-nav) .link,
 :host(.navigation-item-side-nav) ::slotted(a) {
   height: var(--navigation-item-height);
